--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-	font-family: monospace;
-	font-size: 13pt;
+	font-family: cambria;
+	font-size: 14pt;
 }
  
 th{
@@ -14,7 +14,7 @@ img{
  
 .kotak{
 	border: 4px solid blue;
-	width: 70%;
+	width: 100%;
 	margin: 10px auto;
 	padding: 20px;
 	background-color:greenyellow;
